# Juego_de_Memoria

JuegoMemoria/Client/: CMakeLists.txt  main.cpp
JuegoMemoria/Server/: CMakeLists.txt  Card.cpp  Card.h  Type.cpp  Type.h  main.cpp
Proyecto 1/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
ServerProyecto1/: Board.cpp  Board.h  CMakeLists.txt  Card.cpp  Card.h  Server.cpp  Server.h  Type.cpp  Type.h  main.cpp
